--- a/ops/tp/docker-compose.yml
+++ b/ops/tp/docker-compose.yml
@@ -15,3 +15,7 @@ services:
     build:
       context: front
       dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    volumes:
+      - ./front:/app
